--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -59,5 +59,33 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/updateType"
         android:layout_margin="10dp"/>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/LogOut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/logout"
+        android:textColor="#ffffff"
+        android:stateListAnimator="@anim/nav_default_pop_exit_anim"
+        android:backgroundTint="#123456"
+        app:cornerRadius="20dp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/post"
+        android:layout_margin="10dp"/>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/tool"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Encrypt Tool"
+        android:textColor="#ffffff"
+        android:stateListAnimator="@anim/nav_default_pop_exit_anim"
+        android:backgroundTint="#123456"
+        app:cornerRadius="20dp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/LogOut"
+        android:layout_margin="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
